Fix for java 8